apps/ingress/base/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
        'consul.hashicorp.com/connect-service': 'ingress'
        'consul.hashicorp.com/connect-service-upstreams': 'frontend:8081,bff:4001'
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - name: frontend
          containerPort: 8080
        - name: bff
          containerPort: 4000
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          readOnly: true
          subPath: nginx.conf
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
