apps/ingress/base/bff.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff
spec:
  type: ExternalName
  externalName: application.app-staging-bff.svc.cluster.local
