apps/ingress/base/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ExternalName
  externalName: application.app-staging-frontend.svc.cluster.local
