apps/ingress/base/nginx-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
        'consul.hashicorp.com/connect-service-upstreams': 'frontend:8081,bff:4001'
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - name: frontend
          containerPort: 8080
        - name: bff
          containerPort: 4000
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          readOnly: true
          subPath: nginx.conf
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - name: frontend
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: bff
    protocol: TCP
    port: 4000
    targetPort: 4000
