apps/ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: application
spec:
  rules:
  - http:
      paths:
      - path: /graphql
        backend:
          serviceName: nginx-service
          servicePort: 4000
      - path: /
        pathType: Prefix
        backend:
          serviceName: nginx-service
          servicePort: 8080
